now works with color, edge details improved

--- a/src/remove_background.ipynb
+++ b/src/remove_background.ipynb
@@ -51,10 +51,7 @@
     "plt.figure(figsize=(6, 6))\n",
     "plt.style.use('_mpl-gallery-nogrid')\n",
     "plt.imshow(sitk.GetArrayViewFromImage(image), cmap=plt.cm.Greys_r)\n",
-    "plt.axis('on');\n",
-    "\n",
-    "\n",
-    "#sitk.Show(image)\n"
+    "plt.axis('on');\n"
    ]
   },
   {
@@ -181,13 +178,8 @@
     "\n",
     "binary_mask = sitk.BinaryThreshold(mask_image, lowerThreshold=1, upperThreshold=255, insideValue=1, outsideValue=0)\n",
     "\n",
-    "# Create an instance of the MaskImageFilter\n",
     "mask_filter = sitk.MaskImageFilter()\n",
-    "\n",
-    "# Set the masking value to 1\n",
     "mask_filter.SetMaskingValue(0)\n",
-    "\n",
-    "# Apply the MaskImageFilter to the color image using the binary mask\n",
     "masked_color_image = mask_filter.Execute(color_image, binary_mask)\n",
     "\n",
     "plt.figure(figsize=(6, 6))\n",
