--- a/src/utils_demo.ipynb
+++ b/src/utils_demo.ipynb
@@ -70,7 +70,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wpc",
+   "display_name": "Python 3.12.2 ('wpc')",
    "language": "python",
    "name": "python3"
   },
@@ -85,6 +85,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "25e4dd281ae2ee9da029f51cc18341144512281b2aeb279fb5442f357b3aaeb8"
+   }
   }
  },
  "nbformat": 4,
